--- a/app/Adoptr/Adoptr/Base.lproj/Main.storyboard
+++ b/app/Adoptr/Adoptr/Base.lproj/Main.storyboard
@@ -176,7 +176,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BqU-Ce-j5o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2300" y="1276.9115442278862"/>
+            <point key="canvasLocation" x="1500" y="1358"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="b6n-YZ-8zU">
