--- a/app/Adoptr/Adoptr/Base.lproj/LaunchScreen.storyboard
+++ b/app/Adoptr/Adoptr/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="iconC w title.png" translatesAutoresizingMaskIntoConstraints="NO" id="4Jl-0b-KAv">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Icon w title" translatesAutoresizingMaskIntoConstraints="NO" id="4Jl-0b-KAv">
                                 <rect key="frame" x="32" y="177" width="310" height="312"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -33,6 +33,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="iconC w title.png" width="500" height="500"/>
+        <image name="Icon w title" width="166" height="166"/>
     </resources>
 </document>
